# rust_test

./: README.md
deepseek/rust-learning-cli/: Cargo.toml
deepseek/rust-learning-cli/src/: main.rs  utils.rs
deepseek/rust-learning-cli/src/lessons/: algo_trading.rs  api_building.rs  api_concepts.rs  api_integration.rs  mod.rs  rust_advanced.rs  rust_basics.rs
qwen/rust_mastery_cli/: Cargo.toml
qwen/rust_mastery_cli/src/: main.rs
